# ncway

./: .gitignore  CMakeLists.txt  COPYRIGHT  Dockerfile  LICENSE.APLv2  README.md
client/: CMakeLists.txt
client/src/: main.cc
debian/: changelog  control  ncway-dev.install  ncway-samples.install  ncway.install  rules
sample/: CMakeLists.txt  README.md
sample/src/: sample.cc
server/: CMakeLists.txt  README.md
server/src/: buffer_descriptor.cc  buffer_descriptor.h  event.cc  event.h  main.cc  subsystem.cc  subsystem.h  subsystem_manager.cc  subsystem_manager.h
server/src/subsystem/: Renderer.cc  compositor.cc  compositor.h  drm.cc  drm.h  egl.cc  egl.h  gbm.cc  gbm.h  input.cc  input.h  kms.cc  kms.h  renderer.h
src/: main.cc
